tests/invalid/type/group_type_mismatch.pts
int group G {
  A = "x"
}

function main() : void {}
